--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -3,25 +3,25 @@
         <div  id="nav-left" class="col-sm-2 col-md-1 sidebar">
             <ul class="nav nav-sidebar">
                 <li class="active">
-                    <a href="#">
+                    <a ng-href="#/actions">
                         <span class="icon-sidenav-action"></span>
                         <p>action map</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a ng-href="#/tactic">
                         <span class="icon-sidenav-tactic"></span>
                         <p>tactic map</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a ng-href="#/documents">
                         <span class="icon-sidenav-docs"></span>
                         <p>pieces a conviction</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a ng-href="#/mafia">
                         <span class="icon-sidenav-mafia"></span>
                         <p>mafia</p>
                     </a>
