--- a/app/views/login.html
+++ b/app/views/login.html
@@ -46,20 +46,19 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" ng-controller="loginController">
           <div class="col-md-12">
-
             <form class="form-inline">
               <div class="input-group">
               <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                <input type="text" class="form-control" ng-model="username" id="exampleInputEmail1" placeholder="Enter username">
               </div>
               <div class="input-group">
               <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control" ng-model="password" id="exampleInputPassword1" placeholder="Password">
               </div>
                <p class="help-block">* mot de passe non valide</p>
-              <button type="submit" class="btn btn-default">se connecter</button>
+              <button type="submit" class="btn btn-default" ng-click="loginFunc()">se connecter</button>
             </form>
           </div>
         </div>
