--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -1,6 +1,6 @@
 
 <!-- Fin contenu -->
-<footer>
+<footer ng-controller="SectorsCtrl">
     <div class="navbar navbar-fixed-bottom">
         <div class="pannelClose">
             <button> <i class="glyphicon glyphicon-remove"></i> </button>
@@ -10,8 +10,8 @@
                 <section class="col-md-offset-1 col-md-1" >
                     <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
                 </section>
-                <section class="col-md-4 contentDashboard" >
-                    <h1>ACTION-NAME</h1>
+                <section class="col-md-4 contentDashboard">
+                    <h1>{{test}}</h1>
                     <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
                     <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
                 </section>
@@ -49,10 +49,8 @@
                 </section>
                 <section class="col-md-4" >
                     <h1>Centre Ville</h1>
-                    sadskljféj dsaklfédsalk fdsa fkljaéds lf dsaklfj klsédaf dsaj flkéads f dask félkdsj 
-                    ldsajkf édsf daskléfj ékldsaj féklads f dasélflksdj félksjd éal fklédsaj f dsaéf 
-                    dasf dsa f dsa f dsa f  ds a dfsa  dfs fasdasdfadsffdsa dsa f ads  fds  f  asd f¨
-                    dsafsadfdsf dasf ads  dfas asd f  dsa fdfds
+                      
+
                 </section>
                 <section class="col-md-3 col-md-offset-1">
                     <div class="dash_influence">
