finish navigation/auth logic

--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,27 +1,27 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="NavBarCtrl">
     <div class="row">
-        <div  id="nav-left" class="col-md-1 sidebar">
+        <div id="nav-left" class="col-md-1 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active">
-                    <a ng-href="#/actions">
+                <li ng-class="{active: actionsBtn}">
+                    <a ng-href="#/actions" ng-click="goToActions()">
                         <span class="icon-sidenav-action"></span>
                         <p>action map</p>
                     </a>
                 </li>
-                <li>
-                    <a ng-href="#/tactic">
+                <li ng-class="{active: tacticBtn}">
+                    <a ng-href="#/tactic"  ng-click="goToTactic()">
                         <span class="icon-sidenav-tactic"></span>
                         <p>tactic map</p>
                     </a>
                 </li>
-                <li>
-                    <a ng-href="#/documents">
+                <li ng-class="{active: documentsBtn}">
+                    <a ng-href="#/documents" ng-click="goToDocuments()">
                         <span class="icon-sidenav-docs"></span>
                         <p>pieces a conviction</p>
                     </a>
                 </li>
-                <li>
-                    <a ng-href="#/mafia">
+                <li ng-class="{active: mafiaBtn}">
+                    <a ng-href="#/mafia" ng-click="goToMafia()">
                         <span class="icon-sidenav-mafia"></span>
                         <p>mafia</p>
                     </a>
