--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -11,7 +11,7 @@
                     <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
                 </section>
                 <section class="col-md-4 contentDashboard">
-                    <h1>{{test}}</h1>
+                    <h1>Test</h1>
                     <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
                     <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
                 </section>
@@ -54,8 +54,9 @@
                 </section>
                 <section class="col-md-3 col-md-offset-1">
                     <div class="dash_influence">
+                    <div ang:round:progress data-round-progress-model="scopeVariableName"></div>
                         <div class="circle_1" data-influence="0.56">
-                            <strong></strong>
+                            <strong>{{influenceValue}}</strong>
                         </div>
                         <div class="influence">
                             <h1>influence</h1>
