--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -54,7 +54,7 @@
                 </section>
                 <section class="col-md-3 col-md-offset-1">
                     <div class="dash_influence">
-                    <div ang:round:progress data-round-progress-model="scopeVariableName"></div>
+                    <div ang:round:progress data-round-progress-model="roundProgressData"></div>
                         <div class="circle_1" data-influence="0.56">
                             <strong>{{influenceValue}}</strong>
                         </div>
