--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="NavBarCtrl">
+<div class="container-fluid" ng-controller="NavBarCtrl" id="navBar">
     <div class="row">
         <div id="nav-left" class="col-md-1 sidebar">
             <ul class="nav nav-sidebar">
