--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -1,1 +1,47 @@
-<h1>Documents view</h1>
+<div ng-controller="DocumentsCtrl">
+  <div class="timeline"> <!-- TimeLine-->
+    <div class="col-md-11 col-md-offset-1">
+      <ol><!--dates-->
+        <li ng-repeat="document in documentsList | orderBy:'-date'"><!--date-->
+          {{document.date}}
+    <!--<span class="details">
+      {{document.desc}}
+    </span>--> 
+  </li><!--\.date-->
+</ol><!--\.dates-->
+</div>
+</div><!--\.end TimeLine-->
+
+
+<div class="col-md-11 col-md-offset-1"><!--contenu-->
+ <div class="col-md-5" ><!--piecess a conviction liste-->
+ <div class="col-md-12 piece" ng-repeat="document in documentsList">  <!--piece a conviction galerie thumbs-->
+    <h1>{{document.description}}<span> - {{document.xp}} XP</span></h1>
+    <p>{{document.description}}</p>
+    <div class="row"><!-- images -->
+      <!--Image-->
+      <div class="col-md-3" ng-repeat="doc in document.documents">
+       <a href="" ng-click="showDetails = ! showDetails" class="thumbnail imgThumb" >
+        <img src="{{doc.thumbnail}}"class="img-responsive img-rounded" alt="{{doc.title}}">
+        <i class="glyphicon glyphicon-{{doc.type}}-circle"></i> {{doc.type}}
+
+        <div ng-class="{ 'hidden': ! showDetails }">{{doc.xp}}</div>
+
+      </a>
+    </div>
+    <!--\.image-->  
+  </div><!-- \. images -->
+</div><!--\pieces a conviction liste -->
+</div><!-- \.pieces a conviction-->
+
+
+<!--Afficher une image TODO: gérer les clicks-->
+<div class="col-md-5 col-md-offset-1 imgGD" ng-show="showDetails">
+  <h1>TitrePhoto</h1>
+  <img src="img/imgPieceAConviction/imgPCA.png"class="img-responsive img-rounded" alt="Cinque Terre" width="100%">
+  <p>Small description</p>
+</div><!---->
+</div><!--\.contenu-->
+
+
+</div>
