add interaction with WS

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -1,105 +1,108 @@
+<div ng-controller="SectorsCtrl">
 
-<!-- Fin contenu -->
-<footer ng-controller="SectorsCtrl">
-    <div class="navbar navbar-fixed-bottom">
-        <div class="pannelClose">
-            <button> <i class="glyphicon glyphicon-remove"></i> </button>
-        </div>
-        <div class="container-fluid mainDaschboard">
-            <div class="row contentDashboardRow">
-                <section class="col-md-offset-1 col-md-1" >
-                    <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
-                </section>
-                <section class="col-md-4 contentDashboard">
-                    <h1>Test</h1>
-                    <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
-                    <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
-                </section>
-                <section class="col-md-2 col-md-offset-1">
-                    <table class="table dash_experience">
-                        <tr>
-                            <th>XP max</th>
-                            <td>25 XP</td>
-                        </tr>
-                        <tr>
-                            <th>XP min</th>
-                            <td>12 XP</td>
-                        </tr>
-                        <tr>
-                            <th>Influence prévue</th>
-                            <td>56%</td>
-                        </tr>
-                        <tr>
-                            <th>baisse</th>
-                            <td>1,5%</td>
-                        </tr>
-                        <tr>
-                            <th>cooldown</th>
-                            <td>35 min</td>
-                        </tr>
-                    </table>
-                </section>
-                <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
-                    <button type="button" class="btn btn-default btn-dash">EFFECTUER</button>
-                </section>
-            </div>
-            <div class="row">
-                <section class="col-md-offset-1 col-md-1" >
-                    <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
-                </section>
-                <section class="col-md-4" >
-                    <h1>Centre Ville</h1>
-                      
 
-                </section>
-                <section class="col-md-3 col-md-offset-1">
-                    <div class="dash_influence">
-                    <div ang:round:progress data-round-progress-model="roundProgressData"></div>
-                       
-                        <div class="influence">
-                            <h1>influence</h1>
-                        </div>
-                    </div>
-                    <div class="dash_secteurs">				
-                        <div class="secteur">
-                            <div class="secteur_qte">
-                                <p><i>2</i> - 5</p>
-                            </div>
-                            <div class="secteur_titre">
-                                <h1>secteur(s)</h1>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-<!--
-                <section class="col-md-3 col-md-offset-1">
-                    <div class="dash_influence">
-                        <div class="circle_1"></div>
-                        <div class="influence">
-                            <h1>Influence</h1>
-                        </div>
-                    </div>
-                    <div class="dash_secteurs">				
-                        <div class="secteur">
-                            <div class="secteur_qte">
-                                <i>2</i> - 5
-                            </div>
-                            <div class="secteur_titre">
-                                <h1>SECTEUR(S)</h1>
-                            </div>
-                        </div>
-                    </div>
-                </section>
--->
-                <section class="col-md-2">
-                    <h1>Action list</h1>
-                    <span class="icon-iconeRound icon-actionlist active"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                </section>
-            </div>
-        </div>
-    </div>
-</footer>
+  <!-- Fin contenu -->
+  <footer ng-controller="SectorsCtrl">
+      <div class="navbar navbar-fixed-bottom">
+          <div class="pannelClose">
+              <button> <i class="glyphicon glyphicon-remove"></i> </button>
+          </div>
+          <div class="container-fluid mainDaschboard">
+              <div class="row contentDashboardRow">
+                  <section class="col-md-offset-1 col-md-1" >
+                      <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
+                  </section>
+                  <section class="col-md-4 contentDashboard">
+                      <h1>Test</h1>
+                      <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
+                      <p>Nam commodo enim ac leo posuere lacinia. Aenean ultricies ante velit, porta rhoncus ipsum tempor vel. Curabitur libero diam, ultricies sed nisl quis, tincidunt euismod purus. Pellentesque iaculis in neque sit amet accumsan. Nunc eu dolor euismod, dignissim turpis nec, efficitur tortor. Duis ac vehicula eros. Aenean magna purus, dignissim efficitur posuere id, tempor quis mi.</p>
+                  </section>
+                  <section class="col-md-2 col-md-offset-1">
+                      <table class="table dash_experience">
+                          <tr>
+                              <th>XP max</th>
+                              <td>25 XP</td>
+                          </tr>
+                          <tr>
+                              <th>XP min</th>
+                              <td>12 XP</td>
+                          </tr>
+                          <tr>
+                              <th>Influence prévue</th>
+                              <td>56%</td>
+                          </tr>
+                          <tr>
+                              <th>baisse</th>
+                              <td>1,5%</td>
+                          </tr>
+                          <tr>
+                              <th>cooldown</th>
+                              <td>35 min</td>
+                          </tr>
+                      </table>
+                  </section>
+                  <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
+                      <button type="button" class="btn btn-default btn-dash">EFFECTUER</button>
+                  </section>
+              </div>
+              <div class="row">
+                  <section class="col-md-offset-1 col-md-1" >
+                      <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+                  </section>
+                  <section class="col-md-4" >
+                      <h1>Centre Ville</h1>
+
+
+                  </section>
+                  <section class="col-md-3 col-md-offset-1">
+                      <div class="dash_influence">
+                      <div ang:round:progress data-round-progress-model="roundProgressData"></div>
+
+                          <div class="influence">
+                              <h1>influence</h1>
+                          </div>
+                      </div>
+                      <div class="dash_secteurs">				
+                          <div class="secteur">
+                              <div class="secteur_qte">
+                                  <p><i>2</i> - 5</p>
+                              </div>
+                              <div class="secteur_titre">
+                                  <h1>secteur(s)</h1>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+  <!--
+                  <section class="col-md-3 col-md-offset-1">
+                      <div class="dash_influence">
+                          <div class="circle_1"></div>
+                          <div class="influence">
+                              <h1>Influence</h1>
+                          </div>
+                      </div>
+                      <div class="dash_secteurs">				
+                          <div class="secteur">
+                              <div class="secteur_qte">
+                                  <i>2</i> - 5
+                              </div>
+                              <div class="secteur_titre">
+                                  <h1>SECTEUR(S)</h1>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+  -->
+                  <section class="col-md-2">
+                      <h1>Action list</h1>
+                      <span class="icon-iconeRound icon-actionlist active"></span>
+                      <span class="icon-iconeRound icon-actionlist"></span>
+                      <span class="icon-iconeRound icon-actionlist"></span>
+                      <span class="icon-iconeRound icon-actionlist"></span>
+                      <span class="icon-iconeRound icon-actionlist"></span>
+                  </section>
+              </div>
+          </div>
+      </div>
+  </footer>
+</div>
