Tab login / fixer HTML

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -1,4 +1,61 @@
-<div class="col-md-11 col-md-offset-1">
-<h1>Actions map</h1>
-<p>fakldsjflkésdajflkdjslkfjsdélkajfélkdsa</p>
-</div>
+
+<!-- Fin contenu -->
+<footer ng-controller="SectorsCtrl">
+    <div class="navbar navbar-fixed-bottom">
+
+
+        <div class="col-md-11 col-md-offset-1">
+            <div class="pannelClose"><!--close-->
+                <button> <i class="glyphicon glyphicon-remove"></i> </button>
+            </div><!-- \. close -->
+        </div>
+
+        <div class="col-md-12 mainDaschboard"> <!-- DashboardControll" -->
+            <div class="row contentDashboardRow">
+                <section class="col-md-offset-1 col-md-1" >
+                    <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
+                </section>
+                <section class="col-md-4 contentDashboard"> <!-- Action -->
+                    <h1>Titre</h1>
+                    <p>Desc</p>
+                    
+                </section><!-- \. Action-->
+
+                <section class="col-md-2 col-md-offset-1"> <!-- XP -->
+                    <table class="table dash_experience">
+                        <tr>
+                            <th>XP max</th>
+                            <td>25 XP</td>
+                        </tr>
+                        <tr>
+                            <th>XP min</th>
+                            <td>12 XP</td>
+                        </tr>
+                        <tr>
+                            <th>Influence prévue</th>
+                            <td>56%</td>
+                        </tr>
+                        <tr>
+                            <th>baisse</th>
+                            <td>1,5%</td>
+                        </tr>
+                        <tr>
+                            <th>cooldown</th>
+                            <td>35 min</td>
+                        </tr>
+                    </table>
+                </section> <!-- XP -->
+
+                <section class="col-md-2"><!-- ActionList -->
+                    <h1>Action list</h1>
+                    <span class="icon-iconeRound icon-actionlist active"></span>
+                    <span class="icon-iconeRound icon-actionlist"></span>
+                    <span class="icon-iconeRound icon-actionlist"></span>
+                    <span class="icon-iconeRound icon-actionlist"></span>
+                    <span class="icon-iconeRound icon-actionlist"></span>
+                </section><!--\.ActionList-->
+
+            </div>
+        </div> <!-- \. DashboardControll" -->
+    </div>
+</footer>
