add register template

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -39,7 +39,7 @@
             <!-- MainLogin -->
             <div class="row">
                <div class="col-md-12 login_header">
-                  <div class="col-md-6 loginMenu selected " ng-class="{active: panel.isSelected(1)}"><a href ng-click="panel.selectTab(1)">Connexion</a></div>
+                  <div class="col-md-6 loginMenu" ng-class="{active: panel.isSelected(1)}"><a href ng-click="panel.selectTab(1)">Connexion</a></div>
                   <div class="col-md-6 loginMenu" ng-class="{active: panel.isSelected(2)}"><a href ng-click="panel.selectTab(2)">S'enregister</a></div>
                </div>
             </div>
@@ -55,16 +55,37 @@
                         <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
                         <input type="password" class="form-control" ng-model="password" id="exampleInputPassword1" placeholder="Password">
                      </div>
-                     <p class="help-block">* mot de passe non valide</p>
+                     <p class="help-block" ng-show="false">* mot de passe non valide</p>
                      <button type="submit" class="btn btn-default" ng-click="loginFunc()">se connecter</button>
                   </form>
                </div>
+               <!-- \. loginCtrl -->
             </div>
-            <!-- \. loginCtrl -->
-            <div class="row" ng-controller="loginController" class="panel" ng-show="panel.isSelected(2)">
+            <div class="row" ng-controller="registerController" class="panel" ng-show="panel.isSelected(2)">
+               <!-- loginCtrl -->
+               
+               
                <div class="col-md-12">
-                  créer un compte
+                  <form class="form-inline">
+                     <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
+                        <input type="text" class="form-control" ng-model="username" id="exampleInputEmail1" placeholder="Enter username">
+                     </div>
+                     <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                        <input type="password" class="form-control" ng-model="password" id="exampleInputPassword1" placeholder="Password">
+                     </div>
+                     <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                        <input type="password" class="form-control" ng-model="confirm" id="confirm" placeholder="Confirm password">
+                     </div>
+                     <button type="submit" class="btn btn-default" ng-click="registerFunc()">créer un compte</button>
+                  </form>
                </div>
+               
+               
+               
+               <!-- \. loginCtrl -->
             </div>
          </div>
          <!-- \. MainLogin -->
