--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -7,11 +7,11 @@
             <div class="xp_wrapper col-sm-5 col-sm-offset-4">
                 <p class="xp">xp</p>
                 <div class="loader_wrap">
-                    <div class="fill" data-xp="33">
-                        <p>132<span>pts</span></p>
+                    <div class="fill" ng-style="progressBar">
+                        <p><span ng-bind="nbXP"></span><span>pts</span> / <span ng-bind="nextLvlXP"></span><span>pts</span></p>
                     </div>
                 </div>
-                <p class="grade">Lieutenant Premiere Classe</p>
+                <p class="grade"><span ng-bind="playerRank"></span> <span ng-bind="playerInfos"></span></p>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
