--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -1,3 +1,9 @@
+<!--    <leaflet id="map" defaults="defaults" center="mapCenter" height="500px" width="500px" markers="markers" geojson="geojson" paths="paths" layers="layers" maxbounds="maxbounds"></leaflet>-->
+<div ng-controller="MapActionCtrl" > 
+  <leaflet width="100%" height="700px" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
+</div>
+
+
 
 <!-- Fin contenu -->
 <footer ng-controller="SectorsCtrl">
