--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -1,6 +1,6 @@
 <!--    <leaflet id="map" defaults="defaults" center="mapCenter" height="500px" width="500px" markers="markers" geojson="geojson" paths="paths" layers="layers" maxbounds="maxbounds"></leaflet>-->
-<div ng-controller="MapActionCtrl" > 
-  <leaflet width="100%" height="700px" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
+<div ng-controller="MapActionCtrl" height="100%"> 
+  <leaflet width="100%" height="100%" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
 </div>
 
 
