add fullpage map support, fix z-index

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -1,6 +1,6 @@
 <!-- Fin contenu -->
 <footer ng-controller="SectorsCtrl">
-  <div class="navbar navbar-fixed-bottom">
+  <div class="navbar navbar-fixed-bottom dashboard-footer">
 
 
     <div class="col-md-11 col-md-offset-1">
