--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -2,7 +2,11 @@
  * Base structure
  */
 html,
-body {
+body,
+#content,
+.fullpage,
+#leafletMap {
+  width: 100%;
   height: 100%;
 }
 .input {
@@ -53,6 +57,12 @@ body {
 /*
 * Table Dashborad E
 */
+footer {
+  z-index: 2;
+}
+div.dashboard-footer {
+  z-index: 2;
+}
 .dash_experience th {
   font-size: 1.4em;
   color: #2b1a11;
@@ -122,6 +132,12 @@ body {
   border-bottom: solid 2px #cccccc;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+/* 
+* Header bar
+*/
+div.header {
+  z-index: 10;
 }
 /*
 * Icones Actionlist
@@ -1102,14 +1118,8 @@ div.network-tooltip {
   border: 1px solid;
   box-shadow: 3px 3px 10px rgba(128, 128, 128, 0.5);
 }
-.map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 1080px;
-  z-index: -1;
-  left: -5px;
+#leafletMap {
+  z-index: 1;
 }
 .login {
   background-image: url('../img/halftone.png');
