--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -1,13 +1,13 @@
 <!--    <leaflet id="map" defaults="defaults" center="mapCenter" height="500px" width="500px" markers="markers" geojson="geojson" paths="paths" layers="layers" maxbounds="maxbounds"></leaflet>-->
-<div ng-controller="MapActionCtrl" height="100%"> 
-  <leaflet width="100%" height="100%" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
+<div ng-controller="MapActionCtrl" class="fullpage"> 
+  <leaflet id="leafletMap" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
 </div>
 
 
 
 <!-- Fin contenu -->
 <footer ng-controller="SectorsCtrl">
-    <div class="navbar navbar-fixed-bottom">
+    <div class="navbar navbar-fixed-bottom dashboard-footer">
 
 
         <div class="col-md-11 col-md-offset-1">
