--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -17,8 +17,8 @@
 
     <div ng-controller="SectorsCtrl" class="col-md-12 mainDaschboard" > <!-- DashboardControll" -->
       <div class="row contentDashboardRow">
-        <section class="col-md-offset-1 col-md-1" >
-          <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
+        <section class="col-md-offset-1 col-md-1 contentActionLogo" >
+           <span class="icon-iconeRound icon-actionlist"></span>
         </section>
         <section class="col-md-4 contentDashboard">
           <h1>Test</h1>
@@ -103,11 +103,11 @@
               -->
               <section class="col-md-2">
                 <h1>Action list</h1>
-                <span class="icon-iconeRound icon-actionlist active"></span>
-                <span class="icon-iconeRound icon-actionlist"></span>
-                <span class="icon-iconeRound icon-actionlist"></span>
-                <span class="icon-iconeRound icon-actionlist"></span>
-                <span class="icon-iconeRound icon-actionlist"></span>
+                <span class="icon-iconeRound icon-actionlist icon-btn active"></span>
+                <span class="icon-iconeRound icon-actionlist icon-btn"></span>
+                <span class="icon-iconeRound icon-actionlist icon-btn"></span>
+                <span class="icon-iconeRound icon-actionlist icon-btn"></span>
+                <span class="icon-iconeRound icon-actionlist icon-btn"></span>
               </section>
             </div>
           </div> <!-- \. DashboardControll" -->
