draw geojson and path in map

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -1,5 +1,5 @@
 <div ng-controller="MapActionCtrl" class="fullpage"> 
-  <leaflet id="leafletMap" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
+  <leaflet id="leafletMap" defaults="defaults" center="mapCenter" geojson="geojson" layers="layers" maxbounds="maxbounds"></leaflet>
 </div>
 
 
