--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -1,5 +1,5 @@
 <div ng-controller="MapSectorCtrl" class="fullpage"> 
-  <leaflet id="leafletMap" defaults="defaults" center="mapCenter" maxbounds="maxbounds"></leaflet>
+  <leaflet id="leafletMap" defaults="defaults" center="mapCenter" geojson="geojson" maxbounds="maxbounds"></leaflet>
 </div>
 
 <!-- Fin contenu -->
